# BRC_compute

./: .gitignore  README.md
.github/workflows/: build-controller.yml  build-worker.yml  update-daemon.yml
BRC_controller/: .gitignore  Dockerfile  compose.yaml  docker-compose.yaml  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
BRC_controller/drizzle/: 0000_shocking_bedlam.sql
BRC_controller/drizzle/meta/: 0000_snapshot.json  _journal.json
BRC_controller/src/: index.ts
BRC_controller/src/db/: index.ts  schema.ts
BRC_controller/src/functions/: helper.ts
BRC_daemon/: .gitignore  Cargo.toml
BRC_daemon/src/: main.rs
BRC_daemon/src/benchmark/: mod.rs  parser.rs  test_runner.rs
BRC_daemon/src/testcase/: generator.rs  mod.rs  solver.py  solver.rs  validator.rs
BRC_daemon/src/utils/: file_manager.rs  mod.rs  status.rs
BRC_deploy/: deployment-controller.yaml  deployment-rabbitmq.yaml  deployment-worker-push.yaml  deployment-worker-upgrade.yaml  ingress.yaml  keda-worker-push.yaml  keda-worker-upgrade.yaml  main.tf
BRC_deploy/CRU/: main.tf  outputs.tf  variables.tf
BRC_deploy/CRU/ssl/: api.brc.r00t3d.co
BRC_docker/: Dockerfile.python
BRC_terraform/: controller-config.yaml  controller-deployment.yaml  env.controller.prod  env.push-worker.prod  main.tf  push-worker-config.yaml  push-worker-deployment.yaml  push-worker-scaler.yaml  rabbitmq-deployment.yaml
BRC_worker/: Dockerfile  compose.yaml  docker-compose.yaml  drizzle.config.ts  nodemon.json  package-lock.json  package.json  tsconfig.json
BRC_worker/src/: index.ts
(+26 files in other folders)
