[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
rand = "0.8"
uuid = { version = "1.7.0", features = ["v4"] }
glob = "0.3.1"
serde_json = "1.0"
chrono = { version = "0.4.33", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
